styles.css
/* ... */
html {
  font-size: 14px;
}

.flex {
  display: flex;
}

.grid {
  display: grid;
}

.pageTitle {
  font-size: 4.25rem;
  font-family: "Bebas Neue", sans-serif;
  text-transform: uppercase;
  letter-spacing: 0.3rem;
  line-height: 1.25;
  margin: 0px 0rem 0.5rem;
}

.sectionTitle {
  font-size: 3rem;
  font-family: "Bebas Neue", sans-serif;
  text-transform: uppercase;
  letter-spacing: 0.3rem;
  line-height: 1.25;
  margin: 0px 0rem 0.5rem;
}

.sectionPara {
  font-size: 1rem;
  line-height: 1.75;
}

button {
  box-shadow: none;
  cursor: pointer;
  width: 250px;
  height: 60px;
  letter-spacing: 4px;
  text-transform: uppercase;
  font-size: 0.75rem;
}

body {
  font-family: "Lato", sans-serif;
}

.bodyContainer {
  width: 100vw;
  height: 100%;
  background-color: var(--primary-dark-400);
  color: var(--white-400);
}

.mainHeader {
  padding: 1rem;
  width: 100%;
  min-height: 100px;
  background-image: linear-gradient(#121612, rgba(18, 22, 18, 0.21));
}

.mainNavBar {
  align-items: center;
  justify-content: space-between;
  height: 100%;
  width: 100%;
  font-size: 0.75rem;
}

.logoContainer {
  height: 100%;
  max-height: 100px;
  min-height: none;
  width: auto;
  overflow: hidden;
  margin-top: 1rem;
  margin-right: 2rem;
  cursor: pointer;
}

.logoLink {
  height: 100%;
  width: 100%;
}

.logoImg {
  height: 60px;
  width: auto;
}

.topNavList {
  display: none;
  align-items: center;
  column-gap: 1rem;
}

.navItem {
  margin: 0rem 0.5rem;
}

.navLink {
  text-transform: uppercase;
  letter-spacing: 4px;
  color: inherit;
  text-decoration: none;
}

.navLink:visited,
.navLink:active {
  color: inherit;
  text-decoration: none;
}

.navLink:hover {
  color: var(--secondary-green-400);
}

.contactItem {
  margin-left: 1.5rem;
}

.filledBtn {
  background-color: var(--secondary-green-faded);
  color: var(--white-400);
}

.contactBtn {
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  height: 3rem;
  max-height: 40px;
  width: 10rem;
  max-width: 124px;
  font-size: 0.75rem;
  box-shadow: none;
  border: 2px solid var(--secondary-green-faded);
  background-color: transparent;
  color: var(--secondary-green-400);
  letter-spacing: 4px;
  text-transform: uppercase;
}

.contactBtn:hover {
  background-color: var(--secondary-green-faded);
  color: var(--white-400);
}

.mobileMenuOpen {
  display: flex;
  align-items: center;
  justify-content: center;
}

.mobileMenuOpen i,
.mobileMenuClose i {
  cursor: pointer;
  font-size: 48px;
  color: var(--white-400);
}

.mobileMenuContainer {
  position: fixed;
  z-index: 100;
  right: 0;
  top: 0;
  bottom: 0;
  width: 60vw;
  min-width: 200px;
  max-width: 450px;
  height: 100vh;
  flex-direction: column;
  padding: 2rem 1rem 2rem 2.5rem;

  background-color: var(--primary-dark-400);

  background: rgba(11, 23, 14, 0.17);
  box-shadow: 0 4px 30px rgba(11, 23, 12, 0.1);
  backdrop-filter: blur(15px);
  -webkit-backdrop-filter: blur(15px);

  transform-origin: 0% 0%;
  transform: translate(100%, 0);
  transition: transform 0.25s ease-in-out;
}

.mobileMenuContainer.active {
  transform: none;
}

.mobileMenuClose {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  margin-bottom: 3rem;
}

.mobileMenuNavList {
  flex-direction: column;
  row-gap: 2rem;
  width: 100%;
  font-size: 1rem;
}

.mobileMenuNavList .navItem {
  margin: 0rem;
}

/* FOOTER STYLING */

.mainFooter {
  font-family: "Lato", sans-serif;
  flex-direction: column;
  width: 100vw;
  height: 100%;
  padding: 6rem 2.5rem;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  column-gap: 3rem;
}

.logoContainerFooter {
  height: 100%;
  overflow: hidden;
}

.logoImgFooter {
  height: 120px;
  width: auto;
}

.footerCopy {
  flex-direction: column;
  align-items: flex-start;
  text-align: left;
  row-gap: 2rem;
  padding: 4rem 0rem 0rem;
}

.subscribeForm {
  flex-direction: column;
  row-gap: 6px;
}

.subscribeTitle {
  font-size: 0.85rem;
  text-transform: uppercase;
  letter-spacing: 4px;
  margin: 0px 0px 4px;
}

.subscribeForm fieldset {
  box-shadow: none;
  border: none;
}

.subscribeForm input {
  box-shadow: none;
  height: 100%;
  padding: 8px;
  border: 1px solid var(--secondary-green-400);
  width: 160px;
  font-size: 0.75rem;
  background-color: var(--primary-dark-400);
  color: var(--white-400);
}

.subscribeBtn {
  box-shadow: none;
  border: none;
  width: 64px;
  height: 42px;
  margin-left: -32px;
  border-radius: 0px 4px 4px 0px;
  background-color: #45a54d;
  text-transform: uppercase;
  letter-spacing: 4px;
  font-size: 0.65rem;
}

.footerList {
  list-style-type: none;
  flex-direction: column;
  row-gap: 1rem;
  font-size: 0.85rem;
  font-weight: 300;
}

/***  INDEX PAGE STYLING HERE ***/

.pageSection {
  width: 100vw;
  overflow-x: hidden;
}

.heroSection {
  flex-direction: column;
  align-items: center;
  row-gap: 2.5rem;
  margin: 1rem 0rem 0rem;
  padding: 0rem 0rem 8rem;
  /*background blend*/
  background-color: transparent;
  background-image: linear-gradient(
    rgba(18, 22, 18, 0),
    rgba(18, 22, 18, 0.21),
    rgba(8, 52, 11, 1)
  );
}

.heroCopyContainer {
  flex-direction: column;
  align-items: center;
  padding: 2rem 2.5rem 4rem;
  row-gap: 1.5rem;
  text-align: center;
}

.heroCopyContainer .heroBtn {
  width: 250px;
  height: 60px;
  max-width: none;
  max-height: none;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: var(--secondary-green-faded);
  color: var(--white-400);
  border: none;
}

.heroBtn:hover {
  background-color: var(--white-400);
  color: var(--secondary-green-900);
}

/*
.heroImg {
  width: 150%;
}*/
/* ... */

